# pms

./: .env.example  .gitignore  .goosehints  .mcp.json  CLAUDE.md  package.json  pnpm-lock.yaml  turbo.json
.claude/commands/: bmad-agent-bmad-master.md  bmad-agent-bmm-analyst.md  bmad-agent-bmm-architect.md  bmad-agent-bmm-dev.md  bmad-agent-bmm-pm.md  bmad-agent-bmm-qa.md  bmad-agent-bmm-quick-flow-solo-dev.md  bmad-agent-bmm-sm.md  bmad-agent-bmm-tech-writer.md  bmad-agent-bmm-ux-designer.md  bmad-bmm-check-implementation-readiness.md  bmad-bmm-code-review.md  bmad-bmm-correct-course.md  bmad-bmm-create-architecture.md  bmad-bmm-create-epics-and-stories.md  bmad-bmm-create-prd.md  bmad-bmm-create-product-brief.md  bmad-bmm-create-story.md  bmad-bmm-create-ux-design.md  bmad-bmm-dev-story.md  bmad-bmm-document-project.md  bmad-bmm-domain-research.md  bmad-bmm-edit-prd.md  bmad-bmm-generate-project-context.md  bmad-bmm-market-research.md  bmad-bmm-qa-automate.md  bmad-bmm-quick-dev.md  bmad-bmm-quick-spec.md  bmad-bmm-retrospective.md  bmad-bmm-sprint-planning.md  bmad-bmm-technical-research.md  bmad-bmm-validate-prd.md  bmad-brainstorming.md  bmad-party-mode.md
_bmad/_config/: manifest.yaml  (+1 more)
docs/: INSTALLATION.md  SYSTEM_PROMPT.md  TEST_REPORT.md  backlog.json  index.md  opera-first-methodology.md  opera-help-analysis.md  opera-research-notes.md  opera-retrospective.md  project-context.md  prompt-01-report.md  test-report-2026-02-16.md  ui-audit-plan.md
scripts/: check-i18n.mjs
tools/mcp-server/: pyproject.toml
tools/mcp-server/src/opera_mcp/: db.py  server.py
(+279 files in other folders)
