[project]
name = "opera-mcp"
version = "0.1.0"
description = "MCP server for Oracle Opera PMS V5 database"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0",
    "oracledb>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opera_mcp"]

[project.scripts]
opera-mcp = "opera_mcp.server:main"
